# python_advanced_materials

./: .flake8  pyproject.toml
module_11_multitasking/: ticket_seller.py
module_11_multitasking/dining_philosophers/: dinning_lock.py  dinning_resolution.py
module_11_multitasking/lock/: threading_synchronization_problem.py  threading_synchronization_resolution.py
