[tool.poetry]
name = "materials"
version = "0.1.0"
description = "Материалы к курсу Python Advanced"
authors = ["Sergei Klimov <s.klimov@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
